--- a/templates/utilisateur/show.html.twig
+++ b/templates/utilisateur/show.html.twig
@@ -11,8 +11,8 @@
     {% endfor %}
 
     <h1>Liste decks de {{ utilisateur.pseudo }}</h1>
-    
-    <p>
+    <br>
+    <div id="list-decks">
         {% for deck in utilisateur.decks|filter(deck => deck.visibilite == 0) %}
         <div class="deck-delete">
             {# "{{ deck.titre }}" de la catégorie: {{ deck.categorie.nom }}  <a href="{{ path('app_play_deck', {'id': deck.id} ) }}">Jouer avec ce deck</a>   <br> #}
@@ -24,6 +24,6 @@
         {% else %}
             Aucun deck n'a été trouvé.
         {% endfor %}
-    </p>
+    </div>
 
 {% endblock %}
