--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,12 +34,13 @@
                             <a class="nav-link" href="{{ path('deck_create') }}">Créer un deck</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_utilisateur') }}">Liste utilisateurs</a>
+                            <a class="nav-link" href="{{ path('app_user') }}">Liste utilisateurs</a>
                         </li>
                       </ul>
                       <form class="form-inline my-2 my-lg-0" method="GET" action="{{ path('search') }}">
 
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="query" name="query" value="{{ app.request.query.get('query') }}" />
+                        <input class="form-control mr-sm-2" type="search" placeholder="Rechercher" aria-label="Rechercher" 
+                            id="query" name="query" value="{{ app.request.query.get('query') }}" />
                         <button type="submit" class="btn btn-info my-2 my-sm-0"><i class="fas fa-search"></i></button>
 
                       </form>
@@ -73,7 +74,7 @@
                                 </div>
                             </li>
                             {% if is_granted('ROLE_ADMIN') %}
-                                <li class="nav-item btn btn-dark ml-3"><a href="{{ path('app_utilisateur') }}">Panneau d'administration</a></li>
+                                <li class="nav-item btn btn-dark ml-3"><a href="{{ path('app_user') }}">Panneau d'administration</a></li>
                             {% endif %}
 
                         </ul>
