--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -16,7 +16,7 @@
 
 <form class="form-inline my-2 my-lg-0" method="GET" action="{{ path('search') }}">
 
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="query" name="query" value="{{ app.request.query.get('query') }}" />
+    <input class="form-control mr-sm-2" type="search" placeholder="Rechercher" aria-label="Rechercher" id="query" name="query" value="{{ app.request.query.get('query') }}" />
     <button type="submit" class="btn btn-outline-success my-2 my-sm-0"><i class="fas fa-search"></i></button>
 
 </form>
