--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
         <header>
             {# <div id="header-contenair"> #}
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="#"><img id="logo" src="{{ asset('img/logo.png') }}" alt="logo flashcards"></a>
+                    <a class="navbar-brand" href="{{ path('app_home') }}"><img id="logo" src="{{ asset('img/logo.png') }}" alt="logo flashcards"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
@@ -25,7 +25,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                       <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="{{ path('app_home') }}">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('deck_create') }}">Créer un deck</a>
@@ -36,7 +36,7 @@
                       </ul>
                       <form class="form-inline my-2 my-lg-0" method="GET" action="{{ path('search') }}">
 
-                        <input class="form-control mr-sm-2" type="search" placeholder="Rechercher" aria-label="Rechercher" 
+                        <input class="form-control mr-sm-2" type="search" placeholder="Rechercher un deck" aria-label="Rechercher" 
                             id="query" name="query" value="{{ app.request.query.get('query') }}" />
                         <button type="submit" class="btn btn-info my-2 my-sm-0"><i class="fas fa-search"></i></button>
 
@@ -84,6 +84,15 @@
         {% block body %}
         
         {% endblock %}
+        </div>
+        <div class="footer-basic">
+            <footer>
+                <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="#">Conditions Générales d'Utilisation</a></li>
+                </ul>
+                <p class="copyright">FlashCards.com © 2023</p>
+            </footer>
         </div>
         {% block javascripts %}
             <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
