--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,9 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('deck_create') }}">Créer un deck</a>
                         </li>
-                        <li class="nav-item">
+                        {# <li class="nav-item">
                             <a class="nav-link" href="{{ path('app_user') }}">Liste utilisateurs</a>
-                        </li>
+                        </li> #}
                       </ul>
                       <form class="form-inline my-2 my-lg-0" method="GET" action="{{ path('search') }}">
 
